--- a/front/.env.production
+++ b/front/.env.production
@@ -1,2 +1,2 @@
-VITE_APP_FRONTEND_BASE_URL=http://localhost:5173
-VITE_APP_BACKEND_BASE_URL=http://localhost:8080
+VITE_APP_FRONTEND_BASE_URL=http://tokenizer.miduoduo.org
+VITE_APP_BACKEND_BASE_URL=http://tokenizer.miduoduo.org:8080
